--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@pinia/nuxt": "^0.5.5",
     "@vuepic/vue-datepicker": "^9.0.3",
     "deepmerge": "^4.3.1",
-    "lidin-app-kit": "/home/nicolas/Projects/lidin-app-kit",
+    "lidin-app-kit": "^1.0.1-beta.4",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
     "muuri": "^0.9.5",
