--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "nico-frontend",
   "compatibility_date": "2024-01-01",
   "compatibility_flags": ["nodejs_compat"],
+  "main": "./.output/server/index.mjs",
   "site": {
     "bucket": "./.output/public"
   },
